Configuracion de Notificaciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,16 @@ spring.devtools.livereload.enabled=true
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Configuración básica del servidor SMTP
+#spring.mail.host=smtp.example.com
+#spring.mail.port=587
+#spring.mail.username=tu_correo@example.com
+#spring.mail.password=tu_contraseña_o_app_password
+
+# Propiedades adicionales (muy recomendadas para seguridad)
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.starttls.required=true # Opcional, pero a veces útil
+# spring.mail.protocol=smtp # Protocolo (usualmente SMTP)
+# spring.mail.test-connection=true # Para probar la conexión al inicio (útil para depuración)
