Configuracion de Notificaciones II
Tutorial de como configurar Twilio y E-mail para notificaciones
Agregar dependencias de mail y Twilio
Modificación en IncidenteServiceImpl para inyectar notificaciones y su envío
Modificación en NotificacionServiceImpl
Agregar configuracion en application.properties para mail y twilio

--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 		</dependency>
 
 		<!-- Spring Java Mail Sender -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-mail</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<!-- Spring Security -->
 <!--		<dependency>-->
@@ -96,11 +96,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.twilio.sdk</groupId>-->
-<!--			<artifactId>twilio</artifactId>-->
-<!--			<version>10.1.5</version>-->
-<!--		</dependency>-->
+
+		<!-- Twilio -->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>10.1.5</version>
+		</dependency>
+
 		<!--		<dependency>-->
 <!--			<groupId>org.springframework.security</groupId>-->
 <!--			<artifactId>spring-security-test</artifactId>-->
