--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,14 +20,15 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Configuración básica del servidor SMTP
-#spring.mail.host=smtp.example.com
-#spring.mail.port=587
-#spring.mail.username=tu_correo@example.com
-#spring.mail.password=tu_contraseña_o_app_password
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
-# Propiedades adicionales (muy recomendadas para seguridad)
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-# spring.mail.properties.mail.smtp.starttls.required=true # Opcional, pero a veces útil
-# spring.mail.protocol=smtp # Protocolo (usualmente SMTP)
-# spring.mail.test-connection=true # Para probar la conexión al inicio (útil para depuración)
+# Configuración de Twilio
+twilio.account.sid=${TWILIO_ACCOUNT_SID}
+twilio.auth.token=${TWILIO_AUTH_TOKEN}
+twilio.whatsapp.sandbox.number=+14155238886
