Configuración Autenticación y Autorización

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,11 @@ spring.mail.properties.mail.smtp.starttls.required=true
 twilio.account.sid=${TWILIO_ACCOUNT_SID}
 twilio.auth.token=${TWILIO_AUTH_TOKEN}
 twilio.whatsapp.sandbox.number=+14155238886
+
+# JWT Configuration
+app.jwtSecret=${JWT_SECRET_INCIDENTES}
+# horas en milisegundos...
+app.jwtExpirationMs=86400000
+
+# Monitorear proceso seguridad (Luego Borrar)
+logging.level.org.springframework.security=TRACE
