Correccion para autorizar segun Roles
Luego se probo con Postman existosamente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,4 @@ app.jwtSecret=${JWT_SECRET_INCIDENTES}
 app.jwtExpirationMs=86400000
 
 # Monitorear proceso seguridad (Luego Borrar)
-logging.level.org.springframework.security=TRACE
+#logging.level.org.springframework.security=TRACE
