--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,17 @@ app.jwtExpirationMs=86400000
 
 # Monitorear proceso seguridad (Luego Borrar)
 #logging.level.org.springframework.security=TRACE
+
+# CONFIGURACIÓN DE SWAGGER/OpenAPI
+# URLs de servidores
+app.openapi.dev-url=http://localhost:8080
+app.openapi.prod-url=http://localhost:8080
+
+# Configuración de SpringDoc
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.packages-to-scan=com.example.sistemareportesincidentes.controller
